--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,26 @@
-.App {
+.Container {
   text-align: center;
+  display: block;
+  margin: 15px auto;
+  background-color: #000000;
+  padding: 15px 0 30px 0;
+  max-width: 500px;
+  border-radius: 8px;
+  box-shadow: 4px 4px 0px #00bcd4;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
+  position: relative;
+  top: -35px;
+  left: 40px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +30,57 @@
   to {
     transform: rotate(360deg);
   }
+}
+img.profile {
+  display: block;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+button {
+  display: block;
+  margin: 15px auto;
+  font-family: "Bebas Neue", cursive;
+  font-size: 20px;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  background: #000000;
+  padding: 10px 15px 10px 15px;
+  border-radius: 8px;
+}
+button:hover {
+  color: black;
+  background: #ffffff;
+  border: 1px solid #000000;
+  box-shadow: 4px 4px 0px #00bcd4, 6px 6px 0px #b2ebf2, 8px 8px 0px #ff5722,
+    10px 10px 0px #dd2c00;
+  cursor: pointer;
+}
+a {
+  text-decoration: none;
+}
+h1 {
+  margin-top: 0;
+  text-align: center;
+  font-family: "Bungee Shade", cursive;
+  color: #ffffff;
+  font-size: 40px;
+}
+h3 {
+  margin: 0;
+  text-align: center;
+  font-family: "Bebas Neue", cursive;
+  color: #ffffff;
+  font-size: 30px;
+  padding: 0;
+}
+.Footer {
+  display: block;
+  text-align: center;
+  font-family: monospace;
+  color: #000000;
+}
+.Footer:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
